--- a/eleven-dubbo-provider/src/main/resources/application.properties
+++ b/eleven-dubbo-provider/src/main/resources/application.properties
@@ -15,7 +15,7 @@ dubbo.registry.address=zookeeper://127.0.0.1:2181
 dubbo.protocol.port=20880
 
 
-dubbo.protocol.name=rest
+#dubbo.protocol.name=rest
 
 dubbo.protocols.p1.id=dubbo1
 dubbo.protocols.p1.name=dubbo
